--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -699,5 +699,6 @@
     <color name="color_80DDFF">#80DDFF</color>
     <color name="color_F8FBFF">#F8FBFF</color>
     <color name="color_FF3535">#FF3535</color>
+    <color name="color_025EE4">#025EE4</color>
 
 </resources>
