--- a/app/src/main/res/drawable/bg_time_number.xml
+++ b/app/src/main/res/drawable/bg_time_number.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/color_80DDFF"
-        android:endColor="@color/color_025BE8"
-        android:angle="270"/>
-    <corners android:radius="4dp" />
+        android:startColor="@color/color_0D2245"
+        android:endColor="@color/color_025EE4"
+        android:angle="90"/>
+    <corners android:radius="1.5dp" />
 </shape>
