--- a/app/src/main/res/layout/view_home_bottom.xml
+++ b/app/src/main/res/layout/view_home_bottom.xml
@@ -7,48 +7,6 @@
     tools:orientation="vertical"
     tools:parentTag="androidx.appcompat.widget.LinearLayoutCompat">
 
-    <LinearLayout
-        android:id="@+id/linPayment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_16"
-        android:layout_marginHorizontal="@dimen/margin_12"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/J369"
-            android:textColor="@color/color_313F56"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcvPayment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:paddingHorizontal="@dimen/margin_5"
-            android:layout_marginTop="@dimen/margin_8"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:itemCount="4"
-            tools:listitem="@layout/item_view_payment_method" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcvPayment2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:paddingHorizontal="@dimen/margin_5"
-            android:layout_marginTop="@dimen/margin_8"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:itemCount="4"
-            tools:listitem="@layout/item_view_payment_method" />
-
-    </LinearLayout>
 
    <LinearLayout
        android:layout_width="match_parent"
@@ -107,6 +65,71 @@
        </LinearLayout>
    </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/linDataPrivacy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="12dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/B634"
+            android:textColor="@color/color_313F56"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+        <ImageView
+            android:layout_width="94dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_12"
+            android:adjustViewBounds="true"
+            android:src="@drawable/img_data_privacy_act"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/linPayment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_16"
+        android:layout_marginHorizontal="@dimen/margin_12"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/J369"
+            android:textColor="@color/color_313F56"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcvPayment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:paddingHorizontal="@dimen/margin_5"
+            android:layout_marginTop="@dimen/margin_8"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="4"
+            tools:listitem="@layout/item_view_payment_method" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcvPayment2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:paddingHorizontal="@dimen/margin_5"
+            android:layout_marginTop="@dimen/margin_8"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="4"
+            tools:listitem="@layout/item_view_payment_method" />
+
+    </LinearLayout>
 
     <org.cxct.sportlottery.ui.maintab.games.view.HomeFollowView
         android:id="@+id/homeFollowView"
