--- a/app/src/main/res/layout/view_home_bottom.xml
+++ b/app/src/main/res/layout/view_home_bottom.xml
@@ -316,7 +316,7 @@
 
         <LinearLayout
             android:id="@+id/linBrand"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
@@ -329,30 +329,41 @@
                 android:layout_height="wrap_content"
                 android:gravity="center">
                 <ImageView
-                    android:layout_width="90dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="140dp"
+                    android:layout_height="46dp"
                     android:adjustViewBounds="true"
-                    android:src="@drawable/img_pagcor_h" />
+                    android:src="@drawable/ic_pagcor_main" />
                 <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="140dp"
+                    android:layout_height="46dp"
                     android:adjustViewBounds="true"
-                    android:layout_marginStart="20dp"
-                    android:src="@drawable/img_bmm_h" />
-                <ImageView
-                    android:layout_width="90dp"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:layout_marginStart="20dp"
-                    android:src="@drawable/img_keep21_h" />
+                    android:layout_marginStart="30dp"
+                    android:src="@drawable/ic_bmm_main" />
             </LinearLayout>
             <ImageView
-                android:id="@+id/iv_pagcor21"
+                android:layout_width="140dp"
+                android:layout_height="46dp"
+                android:adjustViewBounds="true"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_keep21_main" />
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
                 android:layout_marginTop="@dimen/margin_16"
-                android:src="@drawable/bottom_license" />
+                android:drawablePadding="@dimen/margin_4"
+                android:drawableLeft="@drawable/ic_link_black"
+                android:textSize="@dimen/textSize14sp"
+                android:textColor="@color/color_313F56"
+                android:text="www.pagcor.ph/regulatory"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_12"
+                android:drawablePadding="@dimen/margin_4"
+                android:drawableLeft="@drawable/ic_mail_black"
+                android:textSize="@dimen/textSize14sp"
+                android:textColor="@color/color_313F56"
+                android:text="keepitfun@pagcor.ph"/>
 
         </LinearLayout>
 
