--- a/app/src/main/res/layout/dialog_age_verify.xml
+++ b/app/src/main/res/layout/dialog_age_verify.xml
@@ -145,7 +145,17 @@
             </LinearLayout>
 
         </LinearLayout>
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin_30"
+            android:layout_marginTop="@dimen/margin_12"
+            android:gravity="left"
+            android:lineSpacingExtra="3dp"
+            android:text="Fund or credits in the account of player who is found ineligble to play shall mean forfeiture of said fund/credits in favor of the Goverment."
+            android:textColor="@color/color_0D2245"
+            android:textColorLink="@color/color_025BE8"
+            android:textSize="@dimen/textSize12sp" />
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/cbAgree"
             android:layout_width="wrap_content"
