--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -702,4 +702,6 @@
     <color name="color_025EE4">#025EE4</color>
     <color name="color_00C2FF">#00C2FF</color>
     <color name="color_FAFF00">#FAFF00</color>
+    <color name="color_050B18">#050B18</color>
+    <color name="color_66050B18">#66050B18</color>
 </resources>
