--- a/app/src/main/res/layout/activity_verify_identity.xml
+++ b/app/src/main/res/layout/activity_verify_identity.xml
@@ -1,30 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.profileCenter.identity.VerifyIdentityActivity">
 
     <include
         android:id="@id/toolbar"
-        layout="@layout/view_base_tool_bar_no_drawer"/>
+        layout="@layout/view_base_tool_bar_no_drawer" />
 
     <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+        android:layout_height="match_parent"/>
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/identity_container"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:navGraph="@navigation/identity_navigation"
-        tools:layout="@layout/fragment_verify_identity_new"
-        tools:layout_editor_absoluteX="0dp" />
-
-    </FrameLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
