--- a/app/src/main/res/layout/activity_kyc_form.xml
+++ b/app/src/main/res/layout/activity_kyc_form.xml
@@ -416,181 +416,188 @@
 
         </LinearLayout>
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:gravity="center"
-            android:layout_marginTop="@dimen/margin_16"
-            android:background="@drawable/bg_gray_radius_4_1a025be8">
-            <TextView
-                android:id="@+id/tvHomeCurrent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/color_000000"
-                android:textSize="@dimen/textSize14sp"
-                android:textStyle="bold"
-                android:text="@string/P108"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/llProvinceCurrent"
+            android:id="@+id/linAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_16"
-            android:background="@drawable/bg_gray_radius_8_f9fafd"
-            android:foreground="@drawable/fg_ripple"
-            android:paddingLeft="20dp"
-            android:paddingRight="@dimen/margin_25"
-            android:paddingVertical="@dimen/margin_12"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/J036"
-                android:textColor="@color/color_667085"
-                android:textSize="@dimen/textSize14sp" />
-
-            <TextView
-                android:id="@+id/tvProvinceCurrent"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:drawableRight="@drawable/ic_arrow_gray_right_1"
-                android:layout_weight="1"
-                android:ellipsize="end"
-                android:gravity="end"
-                android:maxLines="1"
-                android:textColor="@color/color_050B18"
-                android:textSize="@dimen/textSize14sp" />
-
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/llCityCurrent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_16"
-            android:background="@drawable/bg_gray_radius_8_f9fafd"
-            android:foreground="@drawable/fg_ripple"
-            android:paddingLeft="20dp"
-            android:paddingRight="@dimen/margin_25"
-            android:paddingVertical="@dimen/margin_12"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/J901"
-                android:textColor="@color/color_667085"
-                android:textSize="@dimen/textSize14sp" />
-
-            <TextView
-                android:id="@+id/tvCityCurrent"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:drawableRight="@drawable/ic_arrow_gray_right_1"
-                android:layout_weight="1"
-                android:ellipsize="end"
-                android:gravity="end"
-                android:maxLines="1"
-                android:textColor="@color/color_050B18"
-                android:textSize="@dimen/textSize14sp" />
-
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/llAddressCurrent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_16"
-            android:background="@drawable/bg_gray_radius_8_f9fafd"
-            android:foreground="@drawable/fg_ripple"
-            android:paddingLeft="20dp"
-            android:paddingRight="@dimen/margin_25"
-            android:paddingTop="@dimen/margin_12"
-            android:paddingBottom="@dimen/margin_8"
             android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/M259"
-                android:textColor="@color/color_667085"
-                android:textSize="@dimen/textSize14sp" />
-
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:gravity="center"
+                android:layout_marginTop="@dimen/margin_16"
+                android:background="@drawable/bg_gray_radius_4_1a025be8">
+                <TextView
+                    android:id="@+id/tvHomeCurrent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_000000"
+                    android:textSize="@dimen/textSize14sp"
+                    android:textStyle="bold"
+                    android:text="@string/P108"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/llProvinceCurrent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical">
-                <EditText
-                    android:id="@+id/etAddressCurrent"
+                android:layout_marginTop="@dimen/margin_16"
+                android:background="@drawable/bg_gray_radius_8_f9fafd"
+                android:foreground="@drawable/fg_ripple"
+                android:paddingLeft="20dp"
+                android:paddingRight="@dimen/margin_25"
+                android:paddingVertical="@dimen/margin_12"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/J036"
+                    android:textColor="@color/color_667085"
+                    android:textSize="@dimen/textSize14sp" />
+
+                <TextView
+                    android:id="@+id/tvProvinceCurrent"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:drawableRight="@drawable/ic_arrow_gray_right_1"
                     android:layout_weight="1"
-                    android:background="@color/transparent"
-                    android:paddingVertical="@dimen/margin_8"
-                    android:layout_marginRight="@dimen/margin_12"
                     android:ellipsize="end"
+                    android:gravity="end"
                     android:maxLines="1"
                     android:textColor="@color/color_050B18"
                     android:textSize="@dimen/textSize14sp" />
-                <ImageView
-                    android:id="@+id/ivClearAddressCurrent"
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:src="@drawable/iv_clear_blue"
-                    android:visibility="invisible"/>
+
             </LinearLayout>
-
-
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/llZipCodeCurrent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_16"
-            android:background="@drawable/bg_gray_radius_8_f9fafd"
-            android:foreground="@drawable/fg_ripple"
-            android:paddingLeft="20dp"
-            android:paddingRight="@dimen/margin_25"
-            android:paddingTop="@dimen/margin_12"
-            android:paddingBottom="@dimen/margin_8"
-            android:orientation="vertical">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/N827"
-                android:textColor="@color/color_667085"
-                android:textSize="@dimen/textSize14sp" />
-
             <LinearLayout
+                android:id="@+id/llCityCurrent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical">
-                <EditText
-                    android:id="@+id/etZipCodeCurrent"
+                android:layout_marginTop="@dimen/margin_16"
+                android:background="@drawable/bg_gray_radius_8_f9fafd"
+                android:foreground="@drawable/fg_ripple"
+                android:paddingLeft="20dp"
+                android:paddingRight="@dimen/margin_25"
+                android:paddingVertical="@dimen/margin_12"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/J901"
+                    android:textColor="@color/color_667085"
+                    android:textSize="@dimen/textSize14sp" />
+
+                <TextView
+                    android:id="@+id/tvCityCurrent"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:drawableRight="@drawable/ic_arrow_gray_right_1"
                     android:layout_weight="1"
-                    android:paddingVertical="@dimen/margin_8"
-                    android:layout_marginRight="@dimen/margin_12"
-                    android:background="@color/transparent"
                     android:ellipsize="end"
+                    android:gravity="end"
                     android:maxLines="1"
                     android:textColor="@color/color_050B18"
                     android:textSize="@dimen/textSize14sp" />
-                <ImageView
-                    android:id="@+id/ivClearZipCodeCurrent"
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:src="@drawable/iv_clear_blue"
-                    android:visibility="invisible"/>
-            </LinearLayout>
 
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/llAddressCurrent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_16"
+                android:background="@drawable/bg_gray_radius_8_f9fafd"
+                android:foreground="@drawable/fg_ripple"
+                android:paddingLeft="20dp"
+                android:paddingRight="@dimen/margin_25"
+                android:paddingTop="@dimen/margin_12"
+                android:paddingBottom="@dimen/margin_8"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/M259"
+                    android:textColor="@color/color_667085"
+                    android:textSize="@dimen/textSize14sp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical">
+                    <EditText
+                        android:id="@+id/etAddressCurrent"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@color/transparent"
+                        android:paddingVertical="@dimen/margin_8"
+                        android:layout_marginRight="@dimen/margin_12"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:textColor="@color/color_050B18"
+                        android:textSize="@dimen/textSize14sp" />
+                    <ImageView
+                        android:id="@+id/ivClearAddressCurrent"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:src="@drawable/iv_clear_blue"
+                        android:visibility="invisible"/>
+                </LinearLayout>
+
+
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/llZipCodeCurrent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_16"
+                android:background="@drawable/bg_gray_radius_8_f9fafd"
+                android:foreground="@drawable/fg_ripple"
+                android:paddingLeft="20dp"
+                android:paddingRight="@dimen/margin_25"
+                android:paddingTop="@dimen/margin_12"
+                android:paddingBottom="@dimen/margin_8"
+                android:orientation="vertical">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/N827"
+                    android:textColor="@color/color_667085"
+                    android:textSize="@dimen/textSize14sp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical">
+                    <EditText
+                        android:id="@+id/etZipCodeCurrent"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:paddingVertical="@dimen/margin_8"
+                        android:layout_marginRight="@dimen/margin_12"
+                        android:background="@color/transparent"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:textColor="@color/color_050B18"
+                        android:textSize="@dimen/textSize14sp" />
+                    <ImageView
+                        android:id="@+id/ivClearZipCodeCurrent"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:src="@drawable/iv_clear_blue"
+                        android:visibility="invisible"/>
+                </LinearLayout>
+
+            </LinearLayout>
         </LinearLayout>
+
         <CheckBox
             android:id="@+id/cbPermanent"
             android:layout_width="match_parent"
