--- a/app/src/main/res/layout/fragment_verify_status.xml
+++ b/app/src/main/res/layout/fragment_verify_status.xml
@@ -99,23 +99,23 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp"
+                android:layout_marginVertical="36dp"
                 android:background="@null"
                 android:contentDescription="@null"
-                android:src="@drawable/ic_icon_timev_01" />
+                android:src="@drawable/ic_kyc_status_processing" />
 
             <TextView
                 android:id="@+id/tvVerifyProgress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
-                android:layout_marginVertical="10dp"
                 android:gravity="center"
+                android:lineSpacingExtra="24dp"
                 android:text="@string/p090"
-                android:textColor="@color/color_DB6372"
+                android:textColor="@color/color_F23C3B"
                 android:textSize="@dimen/textSize16sp" />
 
         </LinearLayout>
