--- a/app/src/main/res/layout/fragment_verify_identity_kyc2.xml
+++ b/app/src/main/res/layout/fragment_verify_identity_kyc2.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_edf3f9"
-    android:orientation="vertical">
+    android:fillViewport="true">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/color_edf3f9"
+        android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -236,11 +241,11 @@
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="113dp"
+        android:layout_marginVertical="50dp"
         android:background="@drawable/bg_blue_radius_8"
         android:textSize="@dimen/textSize16sp"
         android:textColor="@color/white"
         android:text="@string/P258"/>
 
 </LinearLayout>
+</androidx.core.widget.NestedScrollView>
