--- a/app/src/main/res/layout/include_kyc_form_input.xml
+++ b/app/src/main/res/layout/include_kyc_form_input.xml
@@ -34,6 +34,7 @@
             android:maxLines="1"
             android:textSize="@dimen/textSize16sp"
             android:textStyle="bold"
+            android:textColorHint="@color/color_66050B18"
             tools:text="input"/>
 
         <ImageView
